2013-09-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #37768 Poll usbtiny 100 times at init time to handle low-clock devices
	* doc/avrdude.texi: Add a FAQ entry about how to connect to a
	target where the firmware has reduced the internal clock speed.

2013-09-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #28344 chip_erase_delay too short for ATmega324P, 644, 644P, and 1284P
	* avrdude.conf: Bump the chip_erase_delay for all ATmega*4 devices
	to 55 ms.  While the datasheet still claims 9 ms, all the XML files
	tell either 45 or 55 ms, depending on STK600 or not.

2013-09-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* fileio.c (fileio): Don't exit(1) if something goes wrong; return
	-1 instead.  Don't refer to obsolete option -f to specify the file
	format.

2013-09-10  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Matthias Trute:
	bug #36901 flashing Atmega32U4 EEPROM produces garbage on chip
	* avrdude.conf.in (ATmega32U4): Fix EEPROM pagesize to 4, the
	datasheet is wrong here.

2013-09-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: check for ar and ranlib in the target tool
	namespace, rather than on the host.

2013-09-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fix byte-wise EEPROM and flash writes on Xmega
	* jtagmkII_private.h (MTYPE_EEPROM_XMEGA): New memory type.
	* jtagmkII.c (jtagmkII_write_byte): For Xmega EEPROM, use
	memory type MTYPE_EEPROM_XMEGA; for flash writes, always
	write 2 bytes starting on an even address.

2013-09-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* term.c: Implement the "verbose" terminal mode command.
	* avrdude.1: Document this.
	* doc/avrdude.texi: (Dito.)

2013-09-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtag3.c (jtag3_write_byte): Do not attempt to start the paged
	algorithm for EEPROM when being connected through debugWIRE.

2013-09-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Extend the single-byte algorithm to all devices, both flash and